# PluginTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  info.xml.in
.github/: template-sync.yml
.github/workflows/: template-sync.yml
PluginSysInfo/src/: PluginSysInfo.cpp  PluginSysInfo.h  SystemInfo.cpp  SystemInfo.h
PluginSysInfo/src/UI/: PluginSysInfoWindow.cpp  PluginSysInfoWindow.h
PluginSysInfo/src/Utils/: Utils.h
PluginTemplate/: template.cmake
PluginTemplate/PluginTemplate/src/: PluginTemplate.cpp  PluginTemplate.h  PluginTemplateWindow.h
PluginTemplate/src/: PluginTemplate.h  PluginTemplateWindow.h
cmake/: ProjectInfo.cmake
